[gd_scene load_steps=24 format=2]

[ext_resource path="res://Objects/Friends/Friend.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/mirror/Walkm1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/mirror/Walkm2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/mirror/Walkm3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/mirror/Walkm4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/mirror/Walkm5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/mirror/Walkm6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/mirror/Walkm7.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/mirror/Walkm9.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/mirror/Walkm8.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/mirror/Walkm10.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/mirror/Attackm1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/mirror/Attackm2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/mirror/Attackm3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/mirror/Attackm4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/mirror/Attackm5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/mirror/Attackm10.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/mirror/Attackm9.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/mirror/Attackm7.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/lifebar/lifebar1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Images/lifebar/lifebar3..png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ) ],
"loop": true,
"name": "Attack",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="Path" type="PathFollow2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"
frame = 1
playing = true
flip_h = true
flip_v = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -30, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.55848, 3.08645 )
shape = SubResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_left = -20.0
margin_top = 40.0
margin_right = 20.0
margin_bottom = 80.0
max_value = 40.0
value = 40.0
texture_under = ExtResource( 20 )
texture_progress = ExtResource( 21 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
